# carta-archived

./: .gitignore  .travis.yml  Dockerfile  Externals  Externals.readme  INSTALL_CMAKE.md  LICENSE  README.md  ThirdParty  circle.yml  createlinks.sh  createlinksMac.sh  runcarta.sh
carta/: .qmake.conf  CMakeLists.txt  Info.plist  carta.pro  config.json  fixpath.sh  readme.txt
carta/VFS/PureWebDevel/: server  skel
carta/config/: config.json  config.pro
carta/cpp/: CMakeLists.txt  common.pri  common_config.pri  copy_files.pri  cpp.pro
carta/cpp/CartaLib/: AxisDisplayInfo.cpp  AxisDisplayInfo.h  AxisInfo.cpp  AxisInfo.h  AxisLabelInfo.cpp  AxisLabelInfo.h  CMakeLists.txt  CartaLib.cpp  CartaLib.h  CartaLib.pro  ContourSet.cpp  Fit1DInfo.cpp  Fit1DInfo.h  IContourGeneratorService.h  ICoordinateFormatter.h  IImage.cpp  IImage.h  IImageRenderService.cpp  IImageRenderService.h  IPCache.cpp  IPCache.h  IPercentileCalculator.h  IPlugin.h  IRemoteVGView.cpp  IRemoteVGView.h  IWcsGridRenderService.cpp  IWcsGridRenderService.h  InputEvents.cpp  InputEvents.h  IntensityCacheHelper.cpp  IntensityCacheHelper.h  IntensityUnitConverter.cpp  IntensityUnitConverter.h  LinearMap.cpp  Nullable.h  PWLinear.h  PixelType.cpp  PixelType.h  ProfileInfo.cpp  ProfileInfo.h  (+8 more)
carta/cpp/CartaLib/Algorithms/: ContourConrec.cpp  ContourConrec.h  ContourConrecFast.cpp  LineCombiner.cpp  LineCombiner.h  cacheUtils.h
carta/cpp/CartaLib/Hooks/: ColormapsScalar.h  ConversionIntensityHook.cpp  ConversionIntensityHook.h  ConversionSpectralHook.cpp  ConversionSpectralHook.h  CoordSystemHook.cpp  CoordSystemHook.h  Fit1DHook.cpp  Fit1DHook.h  FitResult.cpp  FitResult.h  GetImageRenderService.h  GetInitialFileList.h  GetPersistantCache.cpp  GetPersistantCache.h  GetPersistentCache.cpp  GetPersistentCache.h  GetProfileExtractor.cpp  GetProfileExtractor.h  GetWcsGridRenderer.h  Histogram.h  HistogramResult.cpp  HistogramResult.h  HookIDs.h  ImageStatisticsHook.cpp  ImageStatisticsHook.h  Initialize.h  LoadAstroImage.cpp  LoadAstroImage.h  LoadRegion.cpp  LoadRegion.h  PercentileHook.cpp  (+11 more)
carta/cpp/Tests/: StateTester.cpp  TestRawView.h  Tests.pro  TopoSortTest.cpp  pixelPipelineTest.cpp  quantileTest.cpp  quantileTestCommon.h
carta/cpp/core/: CMakeLists.txt  CallbackList.cpp  CallbackList.h  CmdLine.cpp  CmdLine.h  DefaultContourGeneratorService.cpp  DefaultContourGeneratorService.h  DummyGridRenderer.cpp  DummyGridRenderer.h  Globals.cpp  Globals.h  GrayColormap.cpp  GrayColormap.h  IConnector.h  IPlatform.h  IView.h  ImageRenderService.cpp  ImageRenderService.cppGood  ImageRenderService.h  ImageSaveService.cpp  ImageSaveService.h  ImageView.cpp  ImageView.h  MainConfig.cpp  MainConfig.h  Makefile  MyQApp.cpp  MyQApp.h  PluginManager.cpp  PluginManager.h  ProfileExtractor.cpp  ProfileExtractor.h  ProfileExtractor.h.backup  SimpleRemoteVGView.cpp  SimpleRemoteVGView.h  VGView.cpp  VGView.h  Viewer.cpp  Viewer.h  common.pro  (+4 more)
carta/cpp/desktop/: CMakeLists.txt  CustomWebPage.h  DesktopConnector.cpp  DesktopConnector.h  DesktopPlatform.cpp  DesktopPlatform.h  FitsHeaderExtractor.cpp  MainWindow.cpp  MainWindow.h  NetworkAccessManager.cpp  NetworkAccessManager.h  NetworkReplyFileq.cpp  NetworkReplyFileq.h  NewServerConnector.cpp  NewServerConnector.h  SessionDispatcher.cpp  SessionDispatcher.h  desktop.pro  desktopMain.cpp  html5  resources.qrc  websocketclientwrapper.cpp  websockettransport.cpp
carta/cpp/docs/: Doxyfile  Makefile
carta/cpp/plugins/: plugins.pro
carta/cpp/proto/: proto.pro  proto_compile.pri
carta/cpp/server/: ServerConnector.cpp  ServerConnector.h  ServerPlatform.cpp  ServerPlatform.h  server.pro  serverMain.cpp
carta/cpp/testCache/: LevelDbIPCache.cpp  LevelDbIPCache.h  SqLitePCache.cpp  SqLitePCache.h  main.cpp  testCache.pro
carta/cpp/testPercentile/: example.sh  main.cpp  testPercentile.pro
carta/cpp/testProtoBuf/: CartaHelper.cpp  CartaHelper.h  ProtoBufHelper.cpp  ProtoBufHelper.h  databook.proto  example.sh  file_list.proto  main.cpp  proto_raster_image.pri  protobuf.pri  raster_image.proto  request.proto  stream.proto  testProtoBuf.pro
carta/cpp/testQuantiles/: main.cpp  testQuantiles.pro
carta/cpp/testRegion/: main.cpp  testRegion.pro
carta/html5/: CMakeLists.txt  html5.pro
carta/html5/common/: CallbackList.js  IConnector.js  common.pro  libs.js  qooxdoo-3.5-sdk  qooxdoo-3.5.1-sdk  qooxdoo-4.0.1-sdkOrig  qooxdoo-5.0.2-sdk
carta/html5/desktop/: desktopConnector.js  desktopIndex.html  desktopIndexRelease.html
carta/html5/server/: pureweb.min.js  server.probak  serverConnector.js  serverConnector.jsOld  serverIndex.html  serverIndexRelease.html
carta/scriptedClient/: README  animator.py  cartaview.py  cartavis.py  histogram.py  image.py  layer1.py  scriptedClient.pro  setup.py  snapshot.py
carta/scriptedClient/carta/: cartavis.py  colormap.py  grimmer.py  image.py  layer2.py  movie.py  tagconnector.py  test_cartavis.py  test_movie.py
carta/scriptedClient/tests/: ImageUtil.py  __init__.py  conftest.py  coords.py  readme.md  test_animator.py  test_cartavis.py  test_histogram.py  test_image.py  test_layout.py  test_snapshot.py  test_view.py  test_window.py
carta/scripts/: CARTAMac.sh  CARTAViewerMac.sh  buildRelease.py  buildUIfile.sh  buildcarta.sh  buildcasa.sh  carta.sh  cartavis.sh  ci_mac.sh  ci_mac2.sh  ci_mac_buildcarta.sh  ci_mac_buildcasa.sh  ci_mac_common.sh  ci_mac_packaging.sh  ci_mac_thirdparty.sh  copy_dylib_for_Mac_CARTA.sh  copy_dylib_for_Mac_testProtoBuf.sh  deploy-viz2.py  dockerbuildcarta.sh  dockerbuildcartalinux.sh  dockerlaunchDesktop.sh  dockerlaunchServer.sh  dockerrun.sh  dockerrun2.sh  dockerrundesktop.sh  dockerrunlinux.sh  dockerrunmac.sh  dockerrunserver.sh  fabfile.py  fabfile2.py  generateUIfile.sh  install3party.sh  installLibsForCASAonMac.sh  install_protobuf.sh  installqt5.3.sh  lastBuild.json  pytest.ini  readme.md  runScriptTests.sh  runScriptedClientTests.sh  (+4 more)
carta/scripts/legacy/: CARTAMac.sh  buildRelease.py  buildcarta.sh  carta.sh  createlinksMac.sh  deploy-viz2-release.py  fabfile2.py  readme.txt  startCARTAServer.sh
(+2258 files in other folders)
